Fixing the layout shift in the header.

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header {
   &__wrapper {
     position: absolute;
-    width: 100%;
+    width: 100vw;
     left: 0;
   }
   &--light {
@@ -87,14 +87,17 @@
       left: 0;
       border-radius: 2px;
       background-color: var(--color);
-      transition: top var(--duration) ease-in, transform var(--duration) ease-in;
+      transition:
+        top var(--duration) ease-in,
+        transform var(--duration) ease-in;
     }
     & > span:nth-of-type(1) {
       top: 33%;
     }
     & > span:nth-of-type(2) {
       top: 66%;
-      transition: left var(--duration) ease-in,
+      transition:
+        left var(--duration) ease-in,
         opacity calc(var(--duration) - 100ms) ease-in;
     }
     & > span:nth-of-type(3) {
